Revision history for {{$dist->name}}

{{$NEXT}}
  [ API CHANGES ]

  [ BUG FIXES ]

  [ DOCUMENTATION ]

  [ ENHANCEMENTS ]

  [ NEW FEATURES ]

  [ STATISTICS ]

0.29.1 2019-06-24
  [ MISC ]
    - bring the code of conduct and the covenant files into master.
    - officially supported perls are 22..30.

  [ STATISTICS ]
    - code churn: 7 files changed, 131 insertions(+), 32 deletions(-)

0.29.0 2018-06-20
  [ ENHANCEMENTS ]
    - added GitHubREADME::Badge plugin.
    - added ContributorCovenant plugin.

  [ STATISTICS ]
    - code churn: 5 files changed, 25 insertions(+), 2 deletions(-)

0.28.0 2017-12-03
  [ ENHANCEMENTS ]
    - Travis tweaks.

  [ STATISTICS ]
    - code churn: 6 files changed, 169 insertions(+), 6 deletions(-)

0.27.0 2017-04-16
  [ ENHANCEMENTS ]
    - YANICK is the default Authority.
    - some plugins skipped if env variable TRAVIS is present
    - add dependency for Test::Prereqs

  [ STATISTICS ]
    - code churn: 3 files changed, 19 insertions(+), 5 deletions(-)

0.26.0 2017-02-26
  [ ENHANCEMENTS ]
    - Remove Test::Pause::Permissions.
    - Use ReadmeAnyFrom Pod.

  [ STATISTICS ]
    - code churn: 4 files changed, 11 insertions(+), 11 deletions(-)

0.25.1 2015-12-31
  [ DOCUMENTATION ]
    - Fix typo in SYNOPSIS. (GH#5, dams)

  [ STATISTICS ]
    - code churn: 2 files changed, 9 insertions(+), 2 deletions(-)

0.25.0 2015-11-08
  [ ENHANCEMENTS ]
    - Add Test::Pause::Permissions.

  [ STATISTICS ]
    - code churn: 4 files changed, 16 insertions(+), 5 deletions(-)

0.24.0 2015-07-07
  [ ENHANCEMENTS ]
    - More to DZP::Git::Contributor. (GH#4, Karen Etheridge)
    - Remove deprecated private nextVersion plugin. (GH#1-ish)

  [ STATISTICS ]
    - code churn: 5 files changed, 129 insertions(+), 284 deletions(-)

0.23.0 2015-05-28
  [ ENHANCEMENTS ]
    - Change Reporting module to Test::ReportPrereqs.

  [ STATISTICS ]
    - code churn: 3 files changed, 12 insertions(+), 4 deletions(-)

0.22.1 2015-03-18
  [ BUG FIXES ]