@@ -8,6 +8,7 @@ Revision history for {{$dist->name}}
   [ DOCUMENTATION ]
 
   [ ENHANCEMENTS ]
+  - add Dist::Zilla::Plugin::MinimalPerlFast
 
   [ NEW FEATURES ]
 
